2003-11-08  Kevin Vandersloot

	* Makefile.am: remove DISABL_DEPRECATED flags to fix build on
	newer gtk's.

2003-09-21  Dennis Cranston <dennis_cranston at yahoo com>
	
	* procdialogs.c: Apply HIG fixes for the Preferences, Change 
	Priority, Hide, End, and Kill dialogs.  Fix compiler warnings.
	
	* favorites.c: Apply HIG fixes for the Manage Hidden Processes 
	dialog.  Fix compiler warnings.
	
	* memmaps.c: Apply HIG fixes the Memory Maps dialog. Fix compiler 
	warnings.
	
	* interface.c: Add missing mnemonics.  Fix compiler warnings.

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix distchecking

2003-10-20  Bastien Nocera  <hadess@hadess.net>

	* callbacks.c: (cb_tree_key_press), (cb_update_disks):
	* memmaps.c: (add_new_maps), (update_memmaps_dialog):
	* proctable.c: (is_graphical), (get_info), (proctable_update_list):
	make it compile with libgtop HEAD

2003-05-21  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: Fix crash if uid is not correct. Fixes bug #109134

2003-03-28  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c, procdialogs.c, infoview.c: some more HIGifications. Patch from
	Laca Ferretti <elle.uca@libero.it>

2003-03-27  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix crash if username is null

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some more HIGifying. Add some space to some dialogs
	
	* favorties.c: HIG stuff. Remove the frame and provide some space and a mnemonic
	for the tree
	
	* memmaps.c: some space

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: do the configure event even if the graphs aren't displayed. Fixes bug #70101.
	
	* callbacks.c: force a graph redraw when tab switched to reduce the delay

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Finish the prefs dialog

2003-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: HIGify. Some details left.

2003-02-23  Kevin Vandersloot <kfv101@psu.edu>
