@@ -1,5 +1,10 @@
 2003-11-08  Kevin Vandersloot
 
+	* load-graph.c: Fix the cpu graph showing initial values of zero. Fixes
+	bug #119107
+
+2003-11-08  Kevin Vandersloot
+
 	* Makefile.am: remove DISABL_DEPRECATED flags to fix build on
 	newer gtk's.
 
